--- a/src/app/doc/panel.document.html
+++ b/src/app/doc/panel.document.html
@@ -79,7 +79,7 @@
 			<div class="row row-in-tab">
 				<div class="col-md-4">
 					<div class="card-block">
-						<p-panel header="Title" [toggleable] = "true" [collapsed]="true" (onBeforeToggle)="beforeCollapsed()">{{content}}</p-panel>
+						<p-panel id='panel_basic' header="Title" [toggleable] = "true" [collapsed]="true" (onBeforeToggle)="beforeCollapsed()">{{content}}</p-panel>
 					</div>
 					Collapsed?: {{collapsed}}
 				</div>
