--- a/src/app/doc/selectbox.document.html
+++ b/src/app/doc/selectbox.document.html
@@ -144,7 +144,7 @@
                                 placeholder="Please select color"
                                 id='selectbox_searchColor'>
                     </ng-select>
-                    <p><strong> Output value: </strong> {{colorValue.text}} </p>
+                    <p><strong> Output value: </strong> {{colorValue.id}} </p>
                 </div>
                 <div class="col-md-8">
                     <div role="tab" id="ex_4">
