--- a/src/app/doc/dialog.document.html
+++ b/src/app/doc/dialog.document.html
@@ -199,8 +199,8 @@
 					<div id="collapse_ex_7" class="collapse" role="tabpanel" aria-labelledby="ex_7">
 						<div class="jumbotron">
 							<p>component.html</p>
-							<code>&lt;go-button label="Responsive" iconName="external-link-square" buttonColor="primary" (click)="showDialog2()"&gt;</code><br>
-							<code>&lt;go-button label="Non-Responsive" iconName="external-link-square" buttonColor="primary" (click)="showDialog3()"&gt;</code><br>
+							<code>&lt;go-button label="Responsive" iconName="check" buttonColor="primary" (click)="showDialog2()"&gt;</code><br>
+							<code>&lt;go-button label="Non-Responsive" iconName="close" buttonColor="primary" (click)="showDialog3()"&gt;</code><br>
 							<code>&lt;p-dialog [header]="title2" [(visible)]="display2" 
 										[modal] = "true" [width] = "300" [height] = "300" 
 										[closable] = "true" [responsive] = "true"
