update document checkbox, image gallery, radiobutton, sidebar, step, table, tooltip, upload

--- a/src/app/doc/checkbox.document.html
+++ b/src/app/doc/checkbox.document.html
@@ -102,7 +102,7 @@
 					<h4> Block</h4>
 					<go-checkbox 
 							name="chbnames1" 
-							id="chbid1" 
+							id="chb_block" 
 							label="Checkbox: "  
 							[(ngModel)]="datas1" 
 							type="block" 
@@ -133,7 +133,7 @@
 				<div class="col-md-6 card-block">
 					<h4> Inline </h4>
 					<go-checkbox name="chbname2" 
-								id="chbid2" 
+								id="chb_inline" 
 								[(ngModel)]="datas2"  
 								colorTheme="warning"
 								></go-checkbox>
@@ -161,7 +161,7 @@
 				<div class="col-md-6 card-block">
 					<h4> Columns </h4>
                     <go-checkbox name="chbnames3" 
-								id="chbid3" 
+								id="chb_column" 
 								label="Select Checkbox: " 
 								[(ngModel)]="datas3"
 								type="column"
