--- a/src/app/doc/image-gallery.document.html
+++ b/src/app/doc/image-gallery.document.html
@@ -62,7 +62,7 @@
             <div class="row row-in-tab">
                 <div class="col-md-3">
                     <div class="text-xs-center">
-                        <go-image-gallery [images]=ImgGallery></go-image-gallery>
+                        <go-image-gallery [images]=ImgGallery id="img_gal_1"></go-image-gallery>
                     </div>
                 </div>
                 <div class="col-md-9">
@@ -75,7 +75,7 @@
                     </div>
                     <div id="collapse_ex_1" class="collapse" role="tabpanel" aria-labelledby="ex_1">
                         <div class="jumbotron">
-                            <code>&lt;go-image-gallery [images]=name_of_gallery&gt;&lt;/go-image-gallery&gt;</code>
+                            <code>&lt;go-image-gallery [images]=name_of_gallery&gt;&lt;/go-image-gallery id="img_gal_1"&gt;</code>
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
             <div class="row row-in-tab">
                 <div class="col-md-3">
                     <div class="text-xs-center">
-                        <go-image-gallery [images]=ImgGallery showImage=3></go-image-gallery>
+                        <go-image-gallery [images]=ImgGallery showImage=3 id="img_gal_2"></go-image-gallery>
                     </div>
                 </div>
                 <div class="col-md-9">
@@ -96,7 +96,7 @@
                     </div>
                     <div id="collapse_ex_2" class="collapse" role="tabpanel" aria-labelledby="ex_2">
                         <div class="jumbotron">
-                            <code>&lt;go-image-gallery [images]=name_of_gallery showImage=3&gt;&lt;/go-image-gallery&gt;</code>
+                            <code>&lt;go-image-gallery [images]=name_of_gallery showImage=3 id="img_gal_2"&gt;&lt;/go-image-gallery&gt;</code>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
             <div class="row row-in-tab">
                 <div class="col-md-3">
                     <div class="text-xs-center">
-                        <go-image-gallery [images]=ImgGallery showImage=2></go-image-gallery>
+                        <go-image-gallery [images]=ImgGallery showImage=2 id="img_gal_3"></go-image-gallery>
                     </div>
                 </div>
                 <div class="col-md-9">
@@ -117,7 +117,7 @@
                     </div>
                     <div id="collapse_ex_3" class="collapse" role="tabpanel" aria-labelledby="ex_3">
                         <div class="jumbotron">
-                            <code>&lt;go-image-gallery [images]=name_of_gallery showImage=2&gt;&lt;/go-image-gallery&gt;</code>
+                            <code>&lt;go-image-gallery [images]=name_of_gallery showImage=2 id="img_gal_3"&gt;&lt;/go-image-gallery&gt;</code>
                         </div>
                     </div>
                 </div>
