--- a/src/app/doc/step.document.html
+++ b/src/app/doc/step.document.html
@@ -1,3 +1,4 @@
+<div class="container">
 <ul class="nav nav-tabs" role="tablist">
 	<li class="nav-item"><a class="nav-link active" href="#Overview"
 		role="tab" data-toggle="tab">Overview</a></li>
@@ -61,7 +62,7 @@
 				<div class="col-md-5">
 					<div class="card-block">
 						<h4> Basic </h4>
-						<p-steps [model]="items1" ></p-steps>
+						<p-steps [model]="items1" id="basic_steps"></p-steps>
 					</div>
 				</div>
 				<div class="col-md-7">
@@ -82,8 +83,8 @@
 			<div class="row row-in-tab">
 				<div class="col-md-5">
 					<div class="card-block">
-						<h4> Clickable </h4>						
-						<p-steps [model]="items2" [(activeIndex)]="activeIndex" [readonly]="false"></p-steps>						
+						<h4> Clickable + Customize Style </h4>						
+						<p-steps [model]="items2" [(activeIndex)]="activeIndex" [readonly]="false" styleClass="steps-custom" id="custom_steps"></p-steps>						
 					</div>
 				</div>
 				<div class="col-md-7">
@@ -101,48 +102,7 @@
 					</div>
 				</div>
 			</div>
-			<!--<div class="row row-in-tab">
-				<div class="col-md-4">
-					<div class="card-block">
-						
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div role="tab" id="ex_3">
-						<h5 class="mb-0">
-							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_3" aria-expanded="false" aria-controls="collapse_ex_3">
-							Code Example#3
-							</a>
-						</h5>
-					</div>
-					<div id="collapse_ex_3" class="collapse" role="tabpanel" aria-labelledby="ex_3">
-						<div class="jumbotron">
-							<pre> <code  *ngFor="let codeExample of codeExample3" >{{codeExample.data}} <br></code></pre>
-						</div>
-					</div>
-				</div>
-			</div>-->
-			<!--<div class="row row-in-tab">
-				<div class="col-md-4">
-					<div class="card-block">
-						
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div role="tab" id="ex_4">
-						<h5 class="mb-0">
-							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_4" aria-expanded="false" aria-controls="collapse_ex_3">
-							Code Example#3
-							</a>
-						</h5>
-					</div>
-					<div id="collapse_ex_4" class="collapse" role="tabpanel" aria-labelledby="ex_4">
-						<div class="jumbotron">
-							<pre> <code  *ngFor="let codeExample of codeExample4" >{{codeExample.data}} <br></code></pre>
-						</div>
-					</div>
-				</div>
-			</div>-->
 		</div>
 	</div>
+</div>
 </div>
