--- a/src/app/doc/table.document.html
+++ b/src/app/doc/table.document.html
@@ -119,7 +119,7 @@
 			<div class="row row-in-tab">
 				<div class="col-md-4">
 					<go-table class="table table-striped table-border table-hover table-sm" [paging]=true [itemsPerPage]=10 [maxSize]=3 [showCard]="true"
-						cardClass="card-block card-header card-inverse" [filterAll]="false" [columns]="columns_1" [data]="data" (onCellClicked)="cellClick($event)"></go-table>
+						cardClass="card-block card-header card-inverse" [filterAll]="false" [columns]="columns_1" [data]="data" (onCellClicked)="cellClick($event)" id="table_basic"></go-table>
 				</div>
 				<div class="col-md-8">
 					<div role="tab" id="ex_1">
@@ -141,7 +141,7 @@
 
 			<div class="row row-in-tab">
 				<div class="col-md-4">
-					<go-table class="table table-striped table-border table-sm" [paging]=false [filterAll]=true [columns]="columns_2" [data]="data"></go-table>
+					<go-table class="table table-striped table-border table-sm" [paging]=false [filterAll]=true [columns]="columns_2" [data]="data" id='table_gb_filter'></go-table>
 				</div>
 				<div class="col-md-8">
 					<div role="tab" id="ex_2">
@@ -163,7 +163,7 @@
 			<div class="row row-in-tab">
 				<div class="col-md-4">
 					<go-table class="table table-striped table-border table-sm table-responsive" [paging]="true" [itemsPerPage]=4 [maxSize]=2
-						[showCard]="true" cardClass="card-block card-header card-inverse" [filterAll]="false" [columns]="columns_3" [data]="data"></go-table>
+						[showCard]="true" cardClass="card-block card-header card-inverse" [filterAll]="false" [columns]="columns_3" [data]="data" id='table_column_filter'></go-table>
 				</div>
 				<div class="col-md-8">
 					<div role="tab" id="ex_3">
@@ -186,7 +186,7 @@
 				<div class="col-md-4">
 					<go-table class="table table-striped table-border table-sm" [useFixedData]="true" [paging]="true" [itemsPerPage]=1 [maxSize]=4
 						[datalength]=6 [showCard]="true" cardClass="card-block card-header card-inverse" [filterAll]="true" [columns]="columns_4"
-						[data]="data_4" (onTableChanged)="tableChanged($event)"></go-table>
+						[data]="data_4" (onTableChanged)="tableChanged($event)" id='table_fetch'></go-table>
 				</div>
 				<div class="col-md-8">
 					<div role="tab" id="ex_4">
