--- a/src/app/doc/tooltip.document.html
+++ b/src/app/doc/tooltip.document.html
@@ -67,36 +67,17 @@
 		<div class="jumbotron">
 			<div class="row row-in-tab">
 				<div class="col-md-4">
-					<div class="card-block">
-						<div class="row form-group">
-							<h1>Tooltip on Button<br></h1>
-							<div class="col-md-5 form-inline">
-								<go-button id="tooltip_right" label="Right" buttonColor="danger"  pTooltip="tooltip position right"></go-button>
-							</div>
-							<div class="col-md-5">
-								<go-button id="tooltip_left" label="Left" buttonColor="info"  pTooltip="tooltip position left" tooltipPosition="left"></go-button> 
-							</div>		
-						</div>
-						
-						<div class="row form-group">
-							<div class="col-md-5 form-inline">
-								<go-button id="tooltip_top" label="Top" buttonColor="warning"  pTooltip="tooltip position top" tooltipPosition="top"></go-button> 
-							</div>
-							<div class="col-md-5">
-								<go-button id="tooltip_bottom" label="Bottom(Disabled)" buttonColor="success"  pTooltip="tooltip position bottom" tooltipPosition="bottom" tooltipDisabled="true"></go-button>
-							</div>		
-						</div>
-					</div>
-				<div class="col-md-4">
-					<div class="car-block">
-						<div class="row form-group">
-								<h1>ToolTip on Textbox<br></h1>
-								<input id="tooltip_textbox" pTooltip = "Textbox Tooltip" placeholder="Click Me!!" type="text" ng-reflect-text="Enter your name" tooltipEvent="focus">
-							</div>
-						</div>	
-					</div>
-				</div>
-				
+					<label><strong>Basic Tooltip</strong></label>
+					<div style="text-align: center;"><go-button goId="basic_tooltip" iconName="info" buttonColor="info" pTooltip="Basic Tooltip"></go-button></div><br>
+					<label><strong>Tooltip Positioning</strong></label>
+					<div style="text-align: center;"><go-button goId="tooltip_left" label="Left" buttonColor="success"  pTooltip="tooltip position left" tooltipPosition="left"></go-button></div><br>
+					<div style="text-align: center;"><go-button goId="tooltip_top" label="Top" buttonColor="warning"  pTooltip="tooltip position top" tooltipPosition="top"></go-button></div><br>
+					<div style="text-align: center;"><go-button goId="tooltip_bottom" label="Bottom" buttonColor="danger"  pTooltip="tooltip position bottom" tooltipPosition="bottom"></go-button></div><br>
+					<label><strong>Disbled Tooltip</strong></label>
+					<div style="text-align: center;"><go-button goId="tooltip_disbled" label="Disabled" buttonColor="success" pTooltip="disabled tooltip" tooltipDisabled="true"></go-button></div><br>
+					<label><strong>Tooltip with Event</strong></label>
+					<div style="text-align: center;"><input id="tooltip_onfocus" type="text" pTooltip="Textbox Tooltip" tooltipEvent="focus" placeholder="Focus on Me :D"></div>
+				</div>		
 				<div class="col-md-8">
 					<div role="tab" id="ex_1">
 						<h5 class="mb-0">
@@ -112,71 +93,5 @@
 					</div>
 				</div>
 			</div>
-			
-			<!--<div class="row row-in-tab">
-				<div class="col-md-4">
-					<div class="card-block">
-						<h3>Focus and Blur</h3>
-						<go-textbox defaultValue="Right" type="text" pTooltip="Enter your username" tooltipEvent="hover" colorTheme="success"></go-textbox>
-						<input type="text"  pTooltip="Enter your username" placeholder="Right" tooltipEvent="focus" >	
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div role="tab" id="ex_2">
-						<h5 class="mb-0">
-							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_2" aria-expanded="false" aria-controls="collapse_ex_2">
-							Code Example#2
-							</a>
-						</h5>
-					</div>
-					<div id="collapse_ex_2" class="collapse" role="tabpanel" aria-labelledby="ex_2">
-						<div class="jumbotron">
-							<pre> <code  *ngFor="let codeExample of codeExample2" >{{codeExample.data}} <br></code> </pre>
-						</div>
-					</div>
-				</div>
-			</div>-->
-			<!--<div class="row row-in-tab">
-				<div class="col-md-4">
-					<div class="card-block">
-						
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div role="tab" id="ex_3">
-						<h5 class="mb-0">
-							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_3" aria-expanded="false" aria-controls="collapse_ex_3">
-							Code Example#3
-							</a>
-						</h5>
-					</div>
-					<div id="collapse_ex_3" class="collapse" role="tabpanel" aria-labelledby="ex_3">
-						<div class="jumbotron">
-							<pre> <code  *ngFor="let codeExample of codeExample3" >{{codeExample.data}} <br></code></pre>
-						</div>
-					</div>
-				</div>
-			</div>-->
-			<!--<div class="row row-in-tab">
-				<div class="col-md-4">
-					<div class="card-block">
-						
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div role="tab" id="ex_4">
-						<h5 class="mb-0">
-							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_4" aria-expanded="false" aria-controls="collapse_ex_3">
-							Code Example#3
-							</a>
-						</h5>
-					</div>
-					<div id="collapse_ex_4" class="collapse" role="tabpanel" aria-labelledby="ex_4">
-						<div class="jumbotron">
-							<pre> <code  *ngFor="let codeExample of codeExample4" >{{codeExample.data}} <br></code></pre>
-						</div>
-					</div>
-				</div>
-			</div>-->
 		</div>
 </div>
