--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,10 @@
-body {color: #990000!important;}
-a, pre { color: #990000!important;}
+body, pre {color: #990000!important;}
 pre {background-color: rgb(247,247,249)!important;}
 /*.loading-img {margin-left: 30rem; margin-top: 10rem;}*/
 .navbar-footer {border-color:#990000!important;}
 .jumbotron {background-color: #ffffff!important; padding: 2rem 2rem 0 2rem!important;}
-a { color: #990000!important;}
-a:focus, a:hover { color: #cc0000!important;}
+/*a { color: #990000!important;}
+a:focus, a:hover { color: #cc0000!important;}*/
 a.btn, a.btn:focus, a.btn:hover { color: #ffffff!important;}
 nav ul li.nav-item.active a.nav-link { font-weight: bold;}
 nav small#projectName, a.nav-link, a.dropdown-item { color: #990000!important;}
@@ -56,10 +55,4 @@ nav { margin-bottom: 1.25rem; }
 .loading-img {margin-left: 5rem; margin-top: 10rem;}
 #projectName{display:none;}
 #navbarToggler{display:block;}
-}
-
-body .ui-widget-header{
-    background: #990000;
-    color : #ffffff;
-    font-size: 1em;
 }
